# hermes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bun.lockb  package.json  pnpm-lock.yaml  pyproject.toml  uno.config.ts
hermes/: __init__.py  __main__.py  cli.py  core.py  settings.py
hermes/health/: service.py
hermes/task/: models.py  service.py
src/hermes/: __init__.py  __main__.py  settings.py  wheke.py
src/hermes/blood_pressure/: __init__.py  bot.py  cli.py  helpers.py  models.py  pod.py  repository.py  service.py
src/hermes/core/: helpers.py  pod.py  routes.py
src/hermes/core/templates/: account_metrics.html  base.html  index.html
tests/: conftest.py  test_app.py  test_blood_pressure.py  test_cli.py  test_health.py
